# Student-Management-System_CSE-100

./: CMakeLists.txt  admin.c  admin.h  file_operations.c  file_operations.h  main.c  student.c  student.h  teacher.c  teacher.h
